spacing corrections

--- a/css/index.css
+++ b/css/index.css
@@ -369,11 +369,11 @@ color: #684241cc;
 
 #work #games{
     background: url(../images/game.png);
-    background-size: auto, 100%, auto, auto;
+/*    background-size: 100%, auto, auto, auto;*/
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50% ;
-    height: 90vh;
+    background-position: 50% 100% ;
+    height: 95vh;
 }
 
 #primary.button{
@@ -770,9 +770,29 @@ nav a{
 }
 /* Contact Part */
 
+.mail_button{
+    border-width: 1.2px;
+    border-radius: 6px;
+    border-color: #fff7;
+    font-family: 'Poppins', sans-serif;
+    width: fit-content;
+    padding: 1em 1.5em;
+
+    /* font-style: normal; */
+    /* font-weight: normal; */
+    line-height: 1.3125rem;
+    font-size: 1.5rem;
+    text-align: center;
+    background-color: #fff0;
+    color: #fff;
+margin-top: 1.6em;
+    cursor: pointer;
+
+}
+
 #contact{
     padding-top: 3em;
-    padding-bottom: 4em;
+    padding-bottom: 11em;
     height: auto;
     position: relative;
     background: linear-gradient(180deg, #F4F4F4 37.78%, #FFFFFF 97.18%);
@@ -781,7 +801,7 @@ nav a{
     text-align: center;
 }
 #contact .contactheader{
-    padding-top: 1.5em;
+    padding-top: 3em;
     margin: 0 auto;
     font-family: 'Playfair Display', sans-serif;
     font-weight: 800;
@@ -795,7 +815,7 @@ nav a{
     font-weight: normal;
     text-align: center;
     margin: 0 auto;
-    margin-top: 1.5em;
+    margin-top: .5em;
     width: 50vw;
     font-size: 1.75rem;
     line-height: 3rem;
